// Copyright 2021 The Fuchsia Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto3";

package recipe_modules.flutter.goma;

message InputProperties {
  // Path to goma directory.
  string goma_dir = 1;

  // Remote goma server.
  string server = 2;

  // How many jobs to run in parallel.
  int32 jobs = 3;

  // Whether or not to use arbitrary toolchain support.
  bool enable_arbitrary_toolchains = 4;

  // Whether or not to use http2 proxy.
  bool use_http2 = 5;
}
